--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -56,7 +56,7 @@
                     </div>
 
                     <div class="button-group">
-                        <button type="submit" class="btn-primary">
+                        <button type="submit" class="btn-primary" style="width: 100%;">
                             Вход
                         </button>
                     </div>
