--- a/app/templates/tickets/tickets.html
+++ b/app/templates/tickets/tickets.html
@@ -21,11 +21,11 @@
                 </h1>
                 <div class="d-flex gap-2">
                     {% if current_user.is_admin and current_user.admin_mode_enabled %}
-                        <button class="btn btn-danger" onclick="deleteAllClosedTickets()">
+                        <button class="btn btn-danger btn-tickets" onclick="deleteAllClosedTickets()">
                             <i class="fas fa-trash me-2"></i>Удалить все закрытые
                         </button>
                     {% endif %}
-                    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createTicketModal">
+                    <button class="btn btn-primary btn-tickets" data-bs-toggle="modal" data-bs-target="#createTicketModal">
                         <i class="fas fa-plus me-2"></i>Создать тикет
                     </button>
                 </div>
@@ -68,7 +68,7 @@
                                         </div>
                                         <div class="col-md-4 text-md-end">
                                             <a href="{{ url_for('tickets.ticket_detail', ticket_id=ticket.id) }}" 
-                                               class="btn btn-primary btn-sm">
+                                               class="btn btn-primary btn-tickets">
                                                 <i class="fas fa-eye me-1"></i>Просмотр
                                             </a>
                                         </div>
